add MSX emulator (fMSX)

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ Core/Src/retro-go/pce_roms.c
 Core/Src/retro-go/gw_roms.c
 Core/Src/retro-go/sg1000_roms.c
 Core/Src/retro-go/sms_roms.c
+Core/Src/retro-go/msx_roms.c
+Core/Src/retro-go/msx_bios.c
 
 linux/loaded_gb_rom.c
 linux/loaded_nes_rom.c
