MSX : add support for compressing dsk sectors as lzma

--- a/Makefile.common
+++ b/Makefile.common
@@ -345,7 +345,8 @@ C_DEFS +=  \
 -DBPS16 \
 -DLSB_FIRST \
 -DFMSX_NO_MALLOC \
--DFMSX_NO_FILESYSTEM
+-DFMSX_NO_FILESYSTEM \
+-DFMSX_LZMA_FDI
 
 # AS includes
 AS_INCLUDES +=
