Add Français support (translation by [Narkoa](https://github.com/Narkoa))

--- a/Makefile.common
+++ b/Makefile.common
@@ -96,6 +96,7 @@ CODEPAGE ?= 1252
 
 ES_ES ?= 1
 PT_PT ?= 1
+FR_FR ?= 1
 ZH_CN ?= 0
 ZH_TW ?= 0
 KO_KR ?= 0
@@ -122,6 +123,9 @@ else ifeq ($(CODEPAGE), 12521)
 else ifeq ($(CODEPAGE), 12522)
 	PT_PT = 1
 	SCODEPAGE = "iso-8859-1"
+else ifeq ($(CODEPAGE), 12523)
+	FR_FR = 1
+	SCODEPAGE = "iso-8859-1"
 else
     SCODEPAGE = "iso-8859-1"
 endif
@@ -139,6 +143,8 @@ else ifeq ($(UICODEPAGE), 12521)
 	ES_ES = 1
 else ifeq ($(UICODEPAGE), 12522)
 	PT_PT = 1
+else ifeq ($(UICODEPAGE), 12523)
+	FR_FR = 1
 endif
 
 ROMINFOCODE ?= $(SCODEPAGE)
@@ -324,6 +330,7 @@ C_DEFS +=  \
 -DUICODEPAGE=$(UICODEPAGE) \
 -DINCLUDED_ES_ES=$(ES_ES) \
 -DINCLUDED_PT_PT=$(PT_PT) \
+-DINCLUDED_FR_FR=$(FR_FR) \
 -DINCLUDED_ZH_CN=$(ZH_CN) \
 -DINCLUDED_ZH_TW=$(ZH_TW) \
 -DINCLUDED_KO_KR=$(KO_KR) \
@@ -722,7 +729,7 @@ help:
 	@echo "                        949 as Korean; 12521 as Spanish; 12522 as Portuguese; "
 	@echo "  UICODEPAGE          - Sets ui display language.(default=CODEPAGE=1252 as English)"
 	@echo "  ROMINFOCODE         - Sets encoding of parse rom name, default = ascii"
-	@echo "  ES_ES,PT_PT,        "
+	@echo "  ES_ES,PT_PT,FR_FR   "
 	@echo "  ZH_CN,ZH_TW,        "
 	@echo "  KO_KR,JA_JP         - Set to 1 to include or exclude some other language"
 	@echo "  FONT                - Only persist one font and set the font number. "
@@ -753,6 +760,7 @@ help:
 	@echo "  ROMINFOCODE=$(ROMINFOCODE)"
 	@echo "  ES_ES=$(ES_ES)"
 	@echo "  PT_PT=$(PT_PT)"
+	@echo "  FR_FR=$(FR_FR)"
 	@echo "  ZH_CN=$(ZH_CN)"
 	@echo "  ZH_TW=$(ZH_TW)"
 	@echo "  KO_KR=$(KO_KR)"
