--- a/Makefile.common
+++ b/Makefile.common
@@ -342,11 +342,17 @@ C_DEFS +=  \
 -DENABLE_SCREENSHOT=$(ENABLE_SCREENSHOT) \
 -DGNW_TARGET_MARIO=$(GNW_TARGET_MARIO) \
 -DGNW_TARGET_ZELDA=$(GNW_TARGET_ZELDA) \
--DBPS16 \
--DLSB_FIRST \
--DFMSX_NO_MALLOC \
--DFMSX_NO_FILESYSTEM \
--DFMSX_LZMA_FDI
+-DTARGET_GNW \
+-DNO_EMBEDDED_SAMPLES \
+-D__LIBRETRO__ \
+-DVIDEO_COLOR_TYPE_RGB565 \
+-DZ80_CUSTOM_CONFIGURATION \
+-DMSX_NO_ZIP \
+-DMSX_NO_FILESYSTEM \
+-DMSX_NO_SAVESTATE \
+-DMSX_NO_MALLOC \
+-DMAX_VIDEO_WIDTH_320 \
+-DMSX_NO_STEREO
 
 # AS includes
 AS_INCLUDES +=
