MSX : use external flash for YJK table in case of "dual boot" G&W configuration       (it will not allow fullspeed Screen 10/11/12).

--- a/Makefile.common
+++ b/Makefile.common
@@ -677,7 +677,9 @@ flash_test: flash_intflash
 # Programs both the external and internal flash.
 flash: CheckTools CheckDirtySubmodules
 	$(V)$(MAKE) flash_intflash
+ifeq ($(INTFLASH_BANK), 1)
 	$(V)$(MAKE) flash_intflash2
+endif
 	$(V)$(MAKE) flash_extflash
 	$(V)$(RESET_DBGMCU_CMD)
 .PHONY: flash
