Fix for intflash 1 overflow when having a lot of roms. The roms metadata are stored in intflash1 undocumented 128kB extension but when too many roms files are present, the 128kB are overloaded. To prevent that, we don't use intflash1 undocumented 128kB for the rom metadata when flashing a 256MB flash chip.

--- a/Makefile.common
+++ b/Makefile.common
@@ -334,6 +334,7 @@ AS_DEFS +=
 C_DEFS +=  \
 -DINTFLASH_BANK=$(INTFLASH_BANK) \
 -DBIG_BANK=$(BIG_BANK) \
+-DEXTFLASH_SIZE=$(EXTFLASH_SIZE) \
 -DCODEPAGE=$(CODEPAGE) \
 -DUICODEPAGE=$(UICODEPAGE) \
 -DINCLUDED_ES_ES=$(ES_ES) \
