MSX : remove some warnings

--- a/Makefile.common
+++ b/Makefile.common
@@ -332,6 +332,7 @@ AS_DEFS +=
 
 # C defines
 C_DEFS +=  \
+-D_GNU_SOURCE \
 -DINTFLASH_BANK=$(INTFLASH_BANK) \
 -DBIG_BANK=$(BIG_BANK) \
 -DEXTFLASH_SIZE=$(EXTFLASH_SIZE) \
