--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Core/Src/retro-go/sg1000_roms.c
 Core/Src/retro-go/sms_roms.c
 Core/Src/retro-go/msx_roms.c
 Core/Src/retro-go/msx_bios.c
+Core/Src/retro-go/wsv_roms.c
 
 linux/loaded_gb_rom.c
 linux/loaded_nes_rom.c
