--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ Core/Src/retro-go/sms_roms.c
 Core/Src/retro-go/msx_roms.c
 Core/Src/retro-go/msx_bios.c
 Core/Src/retro-go/wsv_roms.c
+Core/Src/retro-go/md_roms.c
 
 linux/loaded_gb_rom.c
 linux/loaded_nes_rom.c
