--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/sylverb/potator.git
 [submodule "gwenesis"]
 	path = gwenesis
-	url = https://github.com/bzhxx/gwenesis
+	url = https://github.com/sylverb/gwenesis
