MSX : enable scaling for screen modes with 256 colors or less

--- a/Makefile.common
+++ b/Makefile.common
@@ -364,12 +364,12 @@ C_DEFS +=  \
 -DTARGET_GNW \
 -DNO_EMBEDDED_SAMPLES \
 -D__LIBRETRO__ \
--DVIDEO_COLOR_TYPE_RGB565 \
 -DZ80_CUSTOM_CONFIGURATION \
 -DMSX_NO_ZIP \
 -DMSX_NO_FILESYSTEM \
 -DMSX_NO_MALLOC \
 -DMAX_VIDEO_WIDTH_320 \
+-DPIXEL_WIDTH=8 \
 -DMSX_NO_STEREO
 
 # AS includes
