Add preliminar Wonderswan support

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Core/Src/retro-go/msx_roms.c
 Core/Src/retro-go/msx_bios.c
 Core/Src/retro-go/wsv_roms.c
 Core/Src/retro-go/md_roms.c
+Core/Src/retro-go/wswan_roms.c
 
 linux/loaded_gb_rom.c
 linux/loaded_nes_rom.c
