--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "gwenesis"]
 	path = gwenesis
 	url = https://github.com/sylverb/gwenesis
+[submodule "beetle-wswan-go"]
+	path = beetle-wswan-go
+	url = https://github.com/sylverb/beetle-wswan-go.git
