Fix typo in Makefile.common

--- a/Makefile.common
+++ b/Makefile.common
@@ -371,7 +371,7 @@ C_DEFS +=  \
 -DGNW_TARGET_ZELDA=$(GNW_TARGET_ZELDA) \
 -DGAME_GENIE=$(GAME_GENIE) \
 -DTARGET_GNW \
--DOVERCLOCKING_LEVEL=$(OVERCLOCKING_LEVEL)
+-DOVERCLOCKING_LEVEL=$(OVERCLOCKING_LEVEL) \
 -DNO_EMBEDDED_SAMPLES \
 -D__LIBRETRO__ \
 -DZ80_CUSTOM_CONFIGURATION \
