Add Amstrad CPC 6128 support (beta). Removed global emulator_framebuffer variable. Corrected a typo in allocation file that was causing .data section to go in DTCRam memory instead of the correct zone for each emulator

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ saveflash.ld
 
 rom_hashes.txt
 
+Core/Src/retro-go/amstrad_roms.c
 Core/Src/retro-go/col_roms.c
 Core/Src/retro-go/gb_roms.c
 Core/Src/retro-go/gg_roms.c
