--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "prosystem-go"]
 	path = prosystem-go
 	url = https://github.com/sylverb/prosystem-go.git
+[submodule "caprice32-go"]
+	path = caprice32-go
+	url = https://github.com/sylverb/caprice32-go.git
